--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -44,10 +44,10 @@
     <nav class="navbar navbar-default">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">GiveIndia</a>
+                <a class="navbar-brand" href="#"></a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="#">GiveIndia</a></li>
                 <li><a href="#!/slots">View Slots</a></li>
                 <li><a href="#">Page 2</a></li>
                 <li><a href="#">Page 3</a></li>
